--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ html, body{
     box-sizing: border-box;
     text-align: center;
     font-family: sans-serif;
+    font-family: 'MedievalSharp', cursive;
 }
 
 
@@ -16,7 +17,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(3px);
     
     
 }
@@ -25,10 +26,13 @@ main{
     color: rgb(251, 252, 255);
     background-color:rgba(30, 30, 30, 0.99) ;
     width: 80%;
+    
     margin: auto;
     margin-top: 0;
     padding: 2%;
 }
+
+
 header{
     border: 2px solid rgb(251, 252, 255, 0.5);
     background-color:rgba(30, 30, 30, 0.9) ;
@@ -39,62 +43,9 @@ header{
 }
 
 
-h1{
-    margin-top:0;
-    padding: 1%;
-    letter-spacing: 0.3rem;
-    font-size: 3rem;
-}
-
-h2{
-    font-size: 2rem;
-}
-
-.recipe{
-    line-height: 1.5;
-    border-radius: 8px;
-    box-shadow: 2px 2px 2px 2px black;
-    color: rgb(251, 252, 255);
-    border: 2px solid rgb(251, 252, 255,0.3);
-    display: flex;
-    flex-direction: column;
-    padding: 1%;
-    background-color:rgba(30, 30, 30, 0.9) ;
-   
-}
-
-.recipe p{
-    height: 150px;
-    padding: 2%;
-}
-
 hr{
+   
     width: 100%;
     border-color: black;
     
-}
-
-.recipes-container{
-    width: 100%;
-    display:flex;
-    justify-content: space-around;
-    margin-top: 5%;
-    
-
-}
-
-
-.recipes-container > div{
-    max-width: 25%;
-}
-
-.recipe-link button{
-    font-size: 1rem;
-    padding: 2%;
-    margin-top: 5%;
-    border-radius: 7px;
-}
-.recipe-link a{
-    text-decoration: none;
-    color: black;
 }
