--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html, body{
 
 
 body{
-    background-image: url(/images/background.avif);
+    background-image: url(images/background.avif);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
